переделка Ботов на интерфейс (как Bukkit делает с энтити)